--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 --secondary-text-color:#FFFFFF;
 --accent-color: #4D5AE5;
 --main-font: "Roboto",sans-serif;
---left-indent:0;}
+--left-indent:0;
+--transition-duration-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 html{box-sizing: border-box;}
 
@@ -16,12 +17,14 @@ body{
 ul,p{margin: 0;}
 ul{padding-left: var(--left-indent);}
 
-a{cursor: pointer;}
+a{cursor: pointer;
+text-decoration: none;}
 
 h1,h2,h3{margin-top: 0;}
 
 img{display: block;
-max-width: 100%;}
+max-width: 100%;
+height:auto;}
 
 .container{max-width:  1158px;
 padding-left: 15px;
@@ -70,20 +73,38 @@ color:var(--primary-text-color)}
 }
 
 .nav-list{display: flex;
-margin-left: 77px;}
-
+margin-left: 77px;
+}
 .nav-list .item +.item {margin-left: 40px;}
 
-.nav-link{padding-top:21px;
-padding-bottom:21px;
+.nav-link{position: relative;
+transition: color 250ms var(--transition-duration-and-func);
+padding-top:24px;
+padding-bottom:24px;
+
 
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 text-decoration: none;
-color:var(--primary-text-color);}
+color:var(--primary-text-color);
+}
 
 .nav-link:hover,.nav-link:focus{color: var(--accent-color);}
+
+.link-active::after{position: absolute;
+bottom:0;
+left:0;
+
+content:"";
+width: 100%;
+height: 4px;
+
+background-color: #404BBF;;
+border-radius: 2px;
+box-shadow:0px 4px 4px 0px #00000040;
+}
+.link-active:active::after{color: #404BBF;}
 
  /* contacts */
   .contacts{ display: flex;
@@ -92,7 +113,7 @@ color:var(--primary-text-color);}
    
   .contacts .item + .item{ margin-left: 40px;}
 
-  .contact-link{
+  .contact-link {transition: color var(--transition-duration-and-func);
     line-height:1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
@@ -127,7 +148,7 @@ background-size: cover;}
     color:var(--secondary-text-color);}
 
 /* hero-btn */
-.button{ 
+.button{ transition: background-color var(--transition-duration-and-func), box-shadow 250ms var(--transition-duration-and-func), border-radius var(--transition-duration-and-func);
     background: #4D5AE5;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -143,14 +164,54 @@ background-size: cover;}
     cursor: pointer;
     border:none}
 
-.button:active{background: #404BBF;
+.button:active{background-color: #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;}
 
-.button:hover{background: #4D5AE5;
+.button:hover{background-color: #4D5AE5;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 4px;}
-    
+
+    /* modal-window */
+
+.backdrop{position: fixed;
+top:0;
+left:0;
+padding: 88px 516px 12px;
+width: 100%;
+height: 675px ;
+background-color:rgba(46, 47, 66, 0.4) ;
+}
+.backdrop.is-hidden{
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+}
+
+.modal{position: absolute;
+top:50%;
+left:50%;
+transform:translate(-50%, -45%);
+
+background-color:  #FCFCFC;
+width: 408px;
+height: 576px;
+box-shadow: 0px 2px 1px 0px #00000033;
+}
+.modal-button{position: absolute;
+right: 0;
+
+margin-top: 24px;
+margin-right: 24px;
+display:block;
+width: 24px ;
+height: 24px; 
+background-color: #E7E9FC;
+border:  1px solid #0000001A; 
+border-radius: 50%;}
+
+.modal-icon{width: 8px;
+height: 8px;}
   
 /* features */
 .section-features{padding-bottom: 0;}
@@ -189,16 +250,6 @@ margin-bottom: 8px;
 .work {display: flex;
 }
 .work-list:not(:last-child){margin-right: 24px;}
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -242,8 +293,8 @@ justify-content: center;
 gap:24px;}
 
 .socials-link {display: flex;
-    justify-content: center;
-    align-items: center;
+justify-content: center;
+align-items: center;
 width: 40px;
 height: 40px;
 border-radius: 50%;
@@ -270,6 +321,9 @@ fill: var(--secondary-text-color);}
 .customers-link{display:flex;
     justify-content: center;
     align-items: center;
+
+    transition: fill 250ms var(--transition-duration-and-func), 
+    border var(--transition-duration-and-func);
 
     width: 168px;
     height: 88px;
@@ -322,6 +376,9 @@ fill: var(--secondary-text-color);}
 .social-list-item-link {display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: background-color var(--transition-duration-and-func);
+
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -345,7 +402,10 @@ fill: var(--secondary-text-color);}
 .filters-list:nth-child(1){margin-left: 0;}
 
 .filter{padding: 12px 24px 12px 24px;
-    
+
+    transition: color var(--transition-duration-and-func),
+background-color var(--transition-duration-and-func),box-shadow var(--transition-duration-and-func);
+
     font-family:var(--main-font);
     font-weight: 600;
     font-size: 16px;
@@ -364,14 +424,18 @@ fill: var(--secondary-text-color);}
     
 
 /* gallery-list-picture */
+
 .gallery-list {display: flex;
 flex-wrap: wrap;
 margin-left:-24px;
-margin-top: -48px;
-}
-.gallery-item:hover,.gallery-item:focus{box-shadow:  0px 2px 1px 0px #2E2F4214;
-box-shadow: 0px 1px 1px 0px #2E2F4229;
+margin-top: -48px;}
+
+.gallery-item:hover,.gallery-item:focus{box-shadow:  0px 2px 1px 0px #2E2F4214;box-shadow: 0px 1px 1px 0px #2E2F4229;
 box-shadow: 0px 1px 6px 0px #2E2F4214;}
+
+.gallery-link:hover .card-overlay{transform: translate(0,0);}
+.gallery-link:focus .card-overlay {transform: translate(0,0);}
+
 
 .gallery-list>.gallery-item{margin-left: 24px;
  margin-top: 48px;}
@@ -390,6 +454,23 @@ letter-spacing: 0.02em;
 color:var(--title-text-color);}
 
  /* Cards */
+ .card-overlay{ position: absolute;
+top:0;
+left:0;
+overflow: auto;
+transform: translate(0,100%);
+transition: transform var(--transition-duration-and-func);
+width: 100%;
+height: 100%;
+padding: 40px 32px 164px;
+background-color: var(--accent-color);
+line-height: 1.5;
+letter-spacing: 0,02em;
+color:#F4F4FD;}
+
+
+.card-thumb{position:relative ;
+overflow: hidden;} 
 
 .card-content{padding-left:16px;
 padding-top: 32px;
