--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ color:var(--primary-text-color);
 .nav-link:hover,.nav-link:focus{color: var(--accent-color);}
 
 .link-active::after{position: absolute;
-bottom:0;
+bottom:-3px;
 left:0;
 
 content:"";
@@ -149,6 +149,7 @@ background-size: cover;}
 
 /* hero-btn */
 .button{ transition: background-color var(--transition-duration-and-func), box-shadow 250ms var(--transition-duration-and-func), border-radius var(--transition-duration-and-func);
+
     background: #4D5AE5;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -172,46 +173,7 @@ background-size: cover;}
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 4px;}
 
-    /* modal-window */
-
-.backdrop{position: fixed;
-top:0;
-left:0;
-padding: 88px 516px 12px;
-width: 100%;
-height: 675px ;
-background-color:rgba(46, 47, 66, 0.4) ;
-}
-.backdrop.is-hidden{
-opacity: 0;
-visibility: hidden;
-pointer-events: none;
-}
-
-.modal{position: absolute;
-top:50%;
-left:50%;
-transform:translate(-50%, -45%);
-
-background-color:  #FCFCFC;
-width: 408px;
-height: 576px;
-box-shadow: 0px 2px 1px 0px #00000033;
-}
-.modal-button{position: absolute;
-right: 0;
-
-margin-top: 24px;
-margin-right: 24px;
-display:block;
-width: 24px ;
-height: 24px; 
-background-color: #E7E9FC;
-border:  1px solid #0000001A; 
-border-radius: 50%;}
-
-.modal-icon{width: 8px;
-height: 8px;}
+   
   
 /* features */
 .section-features{padding-bottom: 0;}
@@ -250,8 +212,6 @@ margin-bottom: 8px;
 .work {display: flex;
 }
 .work-list:not(:last-child){margin-right: 24px;}
-
-
 
 
 /* our team */
@@ -430,8 +390,13 @@ flex-wrap: wrap;
 margin-left:-24px;
 margin-top: -48px;}
 
-.gallery-item:hover,.gallery-item:focus{box-shadow:  0px 2px 1px 0px #2E2F4214;box-shadow: 0px 1px 1px 0px #2E2F4229;
+.gallery-link{
+display: block;
+transition: box-shadow var(--transition-duration-and-func);}
+
+.gallery-link:hover,.gallery-link:focus{box-shadow:  0px 2px 1px 0px #2E2F4214;box-shadow: 0px 1px 1px 0px #2E2F4229;
 box-shadow: 0px 1px 6px 0px #2E2F4214;}
+
 
 .gallery-link:hover .card-overlay{transform: translate(0,0);}
 .gallery-link:focus .card-overlay {transform: translate(0,0);}
@@ -477,3 +442,56 @@ padding-top: 32px;
 padding-bottom: 32px;
 border: 0.5px solid #F4F4FD;
 box-shadow: 0px 1px 6px 0px #2E2F4214;}
+
+
+/* modal-window */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 88px 516px 12px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity var(--transition-duration-and-func),visibility var(--transition-duration-and-func);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+
+    background-color: #FCFCFC;
+    width: 408px;
+    height: 576px;
+    box-shadow: 0px 2px 1px 0px #00000033;
+}
+
+.modal-button {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 24px;
+    height: 24px;
+    background-color: #E7E9FC;
+    border: 1px solid #0000001A;
+    border-radius: 50%;
+}
+
+.modal-icon {
+    width: 8px;
+    height: 8px;
+}
